WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263566
[WebGPU] Correct webgpu:api,operation,labels:* test failures
https://bugs.webkit.org/show_bug.cgi?id=263566
Summary
[WebGPU] Correct webgpu:api,operation,labels:* test failures
Mike Wyrzykowski
Reported
2023-10-23 16:23:16 PDT
[WebGPU] Correct webgpu:api,operation,labels:* test failures
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-23 16:23:37 PDT
<
rdar://problem/117379755
>
Mike Wyrzykowski
Comment 2
2023-10-23 17:10:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19464
EWS
Comment 3
2023-10-23 22:53:19 PDT
Committed
269701@main
(00d4a6ebe7fa): <
https://commits.webkit.org/269701@main
> Reviewed commits have been landed. Closing PR #19464 and removing active labels.
Fujii Hironori
Comment 4
2023-10-24 00:14:11 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/19476
EWS
Comment 5
2023-10-24 00:17:34 PDT
Committed
269702@main
(9b0a913d44af): <
https://commits.webkit.org/269702@main
> Reviewed commits have been landed. Closing PR #19476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug